tests/paczka1/fuzzy1/97062157.err
Error in line 3: H2JRy A590 81,1
Error in line 8: A590 S927 3,0
Error in line 19: H2JRy A376 63,6
Error in line 22: H2JRy S132 81,0
Error in line 25: H2JRy A590 79,6
Error in line 26: H2JRy S132 2,3
Error in line 30: 4BG6BkoO A590 0,5
Error in line 35: nJm6J7XmnL S927 71,9
